# OracleBot

./: .gitignore  PLAN.md  SETUP.md  ai-built-apps.html  index.html  package.json  probes.html  railway.toml  robots.txt  sample-readiness-report.html  sitemap.xml  trading.html  vercel.json
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  deploy-worker.yml  oraclebot-pr-scan.yml
cli/: README.md  package.json
css/: base.css  pages.css
docs/: 01-site-copy-additions.md  02-concierge-offering.md  03-outbound-playbook.md  04-runner-architecture.md  05-guardrails-test-scenarios.md  batch1-exhibits.md  billing.md  deploy.md
docs/integrations/: github-action.md  webhooks.md
gtm/: README.md  first-touch-playbook.md  icp-qualifying-checklist.md  pipeline-tracker.csv
gtm/2026-05-design-partners/: README.md  cold-dm.md  demo-script.md  design-partner-tracker.csv  follow-up-templates.md
js/: main.js
platform/: .env.example  .gitignore  README.md  drizzle.config.ts  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
runner/: README.md  pyproject.toml  report.md
runner/oraclebot/: __init__.py  cli.py  report_gen.py  run_controller.py  verify_client.py
runner/oraclebot/personas/: trader.py
runner/oraclebot/workers/: api_executor.py  browser_stub.py
scripts/: sync-public-assets.mjs
worker/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
(+229 files in other folders)
